--- a/Practica1/bibliografia.bib
+++ b/Practica1/bibliografia.bib
@@ -4,6 +4,7 @@
  url={https://www.youtube.com/watch?v=-rxGSe2ROX4},
  author={Jose Miguel Castillo},
  year={2016},
+ publisher = {Usado para explicar el funcionamiento del algoritmo genetico},
 }
 
 
@@ -11,7 +12,7 @@
  title={Material didáctico para la asignatura Sistemas Inteligentes de 3º de Grado en Informática},
  url={http://ocw.um.es/ingenierias/material-de-practicas-de-sistemas-inteligentes/material-clase/materialssii.pdf},
  author={José Manuel Cadenas Figueredo, Marı́a del Carmen Garrido Carrera, Raquel Martı́nez España, Santiago Paredes Moreno},
- year={2016},
+ year={2016}
 }
 
 
