cambiado estilo bibliografia y memoria

--- a/Practica1/bibliografia.bib
+++ b/Practica1/bibliografia.bib
@@ -1,18 +1,19 @@
 
-@article{1,
+
+@article{ssii,
+  title={Material didáctico para la asignatura Sistemas Inteligentes de 3º de Grado en Informática},
+  url={http://ocw.um.es/ingenierias/material-de-practicas-de-sistemas-inteligentes/material-clase/materialssii.pdf},
+  author={José Manuel Cadenas Figueredo and Marı́a del Carmen Garrido Carrera and Raquel Martı́nez España and Santiago Paredes Moreno},
+  year={2016},
+  pages = {65-98}
+}
+
+@article{youtube,
  title={5. Algoritmos genéticos},
  url={https://www.youtube.com/watch?v=-rxGSe2ROX4},
  author={Jose Miguel Castillo},
  year={2016},
  publisher = {Usado para explicar el funcionamiento del algoritmo genetico},
-}
-
-
-@article{2,
- title={Material didáctico para la asignatura Sistemas Inteligentes de 3º de Grado en Informática},
- url={http://ocw.um.es/ingenierias/material-de-practicas-de-sistemas-inteligentes/material-clase/materialssii.pdf},
- author={José Manuel Cadenas Figueredo, Marı́a del Carmen Garrido Carrera, Raquel Martı́nez España, Santiago Paredes Moreno},
- year={2016}
 }
 
 
@@ -28,3 +29,4 @@
   month = {mar},
   pages = {261-263}
 }
+
