reestructurado codigo bibliografia configuracion hecha para inundaciones

--- a/Practica2/Memoria/bibliografia.bib
+++ b/Practica2/Memoria/bibliografia.bib
@@ -1,19 +1,18 @@
 
 
-@article{ssii,
-  title={Material didáctico para la asignatura Sistemas Inteligentes de 3º de Grado en Informática},
-  url={http://ocw.um.es/ingenierias/material-de-practicas-de-sistemas-inteligentes/material-clase/materialssii.pdf},
-  author={José Manuel Cadenas Figueredo and Marı́a del Carmen Garrido Carrera and Raquel Martı́nez España and Santiago Paredes Moreno},
-  year={2016},
-  pages = {65-98}
+@article{split,
+  title={Split a String},
+  url={http://www.cplusplus.com/articles/2wA0RXSz/},
+  author={bayusetiaji},
+  publisher = {Usado para partir un string segun un delimitador}
+
 }
 
-@article{youtube,
- title={5. Algoritmos genéticos},
- url={https://www.youtube.com/watch?v=-rxGSe2ROX4},
- author={Jose Miguel Castillo},
- year={2016},
- publisher = {Usado para explicar el funcionamiento del algoritmo genetico},
+@article{regex,
+ title={Regex grouping matches with C++ 11 regex library},
+ url={https://stackoverflow.com/questions/29321249/regex-grouping-matches-with-c-11-regex-library},
+ author={Praetorian},
+ publisher = {Usado para repasar el uso de regex en c++}
 }
 
 
