--- a/Practica2/Memoria/bibliografia.bib
+++ b/Practica2/Memoria/bibliografia.bib
@@ -15,6 +15,12 @@
  publisher = {Usado para repasar el uso de regex en c++}
 }
 
+@article{sort,
+ title={Sorting a vector of custom objects},
+ url={https://stackoverflow.com/questions/1380463/sorting-a-vector-of-custom-objects},
+ author={Alan},
+ publisher = {Usado para ver como ordenar una lista segun multiples criterios}
+}
 
 @article{fenner2012a,
   title = {One-click science marketing},
