memoria terminada a falta de bibliografia

--- a/Practica2/Memoria/bibliografia.bib
+++ b/Practica2/Memoria/bibliografia.bib
@@ -1,5 +1,32 @@
 
 
+@article{stoi,
+  title={GCC 4.9.2 stoi not a member},
+  url={https://www.reddit.com/r/cpp_questions/comments/2s7y35/gcc_492_stoi_not_a_member/},
+  author={boredcircuits}
+}
+
+@article{,
+  title={},
+  url={},
+  author={}
+}
+
+
+@article{,
+  title={},
+  url={},
+  author={}
+}
+
+
+@article{,
+  title={},
+  url={},
+  author={}
+}
+
+
 @article{split,
   title={Split a String},
   url={http://www.cplusplus.com/articles/2wA0RXSz/},
@@ -22,16 +49,9 @@
  publisher = {Usado para ver como ordenar una lista segun multiples criterios}
 }
 
-@article{fenner2012a,
-  title = {One-click science marketing},
-  volume = {11},
-  url = {http://google.es},
-  number = {4},
-  journal = {Nature Materials},
-  publisher = {Nature Publishing Group},
-  author = {Fenner, Martin},
-  year = {2012},
-  month = {mar},
-  pages = {261-263}
+@article{cpp,
+ title={Referencia de C++},
+ url={http://es.cppreference.com/w/cpp},
+ publisher = {Usado para consultas en torno a C++}
 }
 
