--- a/Practica2/Memoria/bibliografia.bib
+++ b/Practica2/Memoria/bibliografia.bib
@@ -1,54 +1,50 @@
 
-
+ Método para convertir un string en un int, en linux no es necesario pero parece que en windows con mingw si por un bug que tiene
 @article{stoi,
   title={GCC 4.9.2 stoi not a member},
   url={https://www.reddit.com/r/cpp_questions/comments/2s7y35/gcc_492_stoi_not_a_member/},
   author={boredcircuits}
 }
 
-@article{,
-  title={},
-  url={},
-  author={}
-}
 
-
-@article{,
-  title={},
-  url={},
-  author={}
-}
-
-
-@article{,
-  title={},
-  url={},
-  author={}
-}
-
-
+  publisher = {Usado para partir un string segun un delimitador que puede ser una expresion regular, lo he usado para parsear las condiciones de las reglas}
 @article{split,
   title={Split a String},
   url={http://www.cplusplus.com/articles/2wA0RXSz/},
   author={bayusetiaji},
-  publisher = {Usado para partir un string segun un delimitador}
-
 }
 
+Lo he usado para ver la mejor forma de usar los operadores de las condiciones que estan guardados como string
+@article{compare,
+  title={Convert string to operator},
+  url={https://stackoverflow.com/questions/24716453/convert-string-to-operator},
+  author={Unglued}
+}
+
+
+Referencia usada para ver cual es la forma correcta de hacer un return de un struct cuando nunca se deberia llegar a esa situacion y si se llega es por un error, buscaba un sinonimo del return null de Java
+@article{return,
+  title={C++ return null struct from function},
+  url={https://stackoverflow.com/questions/22972265/c-return-null-struct-from-function?noredirect=1&lq=1},
+  author={tenfour}
+}
+
+
+Referencia usada para ver como usar expresiones regulares en C++ de forma correcta, lo he usado para parsear las reglas
 @article{regex,
  title={Regex grouping matches with C++ 11 regex library},
  url={https://stackoverflow.com/questions/29321249/regex-grouping-matches-with-c-11-regex-library},
  author={Praetorian},
- publisher = {Usado para repasar el uso de regex en c++}
 }
 
+Referencia usada para ver la forma de ordenar un vector por una serie de criterios estaticos, usado para ordenar el vector de reglas por prioridades
 @article{sort,
  title={Sorting a vector of custom objects},
  url={https://stackoverflow.com/questions/1380463/sorting-a-vector-of-custom-objects},
  author={Alan},
- publisher = {Usado para ver como ordenar una lista segun multiples criterios}
 }
 
+Referencia general de C++, usado para repaso de multitud de referencias sobre el uso de C++
 @article{cpp,
  title={Referencia de C++},
  url={http://es.cppreference.com/w/cpp},
